style.css
*{
    box-sizing: border-box;
}
body{
    background-color: rgba(42, 56, 11, 0.484);
    height: 98vh;
}

.wrapper{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}
.container{
    display: flex;
    flex-direction: column;
    border: 10px solid rgb(45, 68, 87);
    padding: 2px;
    gap: 5px;
    border-radius: 20px;
    width: 40%;
}
.logMsg{
    background-color: aliceblue;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    font-weight:300;
}
.logMsg span{
    font-size: 20px;
    padding: 10px;
}

.result-screen{
    background-color: rgb(251, 250, 250);
    width: 100%;
    text-align: left;
    display: flex;
    justify-content: flex-end;
    border-radius: 10px;
    padding: 20px;
    border: 3px solid ;
}
.result-text{
    text-align: left;
    padding: 5px;
    font-size: 30px;
}

.keys-wrapper{
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
    background-color: rgba(194, 52, 158, 0.397);
    border-radius: 10px;
    border: 3px solid;
}

.row{
    display: flex;
    gap: 10px;
    justify-content: space-around;
}
.button{
    padding: 10px;
    width: 70px;
    height: 70px;
    border-radius: 10px;
    font-weight: bolder;
    background-color: rgba(139, 173, 148, 0.604);
    font-size: 20px;
}
.button:hover{
    background-color: rgb(68, 65, 64);
    color: rgb(255, 255, 255);
}

.ac{
    background-color: rgba(210, 223, 32, 0.651);
}
.operator{
    background-color: blue;
    color: aliceblue;
}

